--- a/sign-in.css
+++ b/sign-in.css
@@ -9,10 +9,13 @@ table, th, td {
 th{
   padding: 5px 30px;
   text-align: center;
+  background-color: lightgrey;
 }
 
 td{
   padding: 5px 30px;
   text-align: center;
 }
+
+
 /* TABLE HTML END */
