coba code export table to csv

--- a/sign-in.css
+++ b/sign-in.css
@@ -9,6 +9,22 @@ td {
 .pages-button{
  width: fit-content;
 }
+
+footer {
+    width: 100%;
+    height: 50px;
+    padding-left: 10px;
+    line-height: 50px;
+    background: white;
+    color: black;
+    font-weight:600;
+    position: absolute;
+    bottom: 0px;
+    text-align: center;
+    box-shadow: -3px -3px 2px rgba(0,0,0,0.1);
+}
+
+
 /* TABLE HTML END */
 
 /* responsive start */
